--- a/references.bib
+++ b/references.bib
@@ -135,11 +135,11 @@
 }
 
 @article{jadhav_comparative_2021,
-  title = {{{COMPARATIVE ANALYSIS OF DEEP LEARNING ARCHITECTURES FOR GRAPE CLUSTER INSTANCE SEGMENTATION}}},
+  title = {Comparative {{Analysis}} of {{Deep Learning Architectures}} for {{Grape Cluster Instance Segmentation}}},
   author = {Jadhav, Parul and Barbole,, Dhanashree},
   year = {2021},
   month = mar,
-  journal = {INFORMATION TECHNOLOGY IN INDUSTRY},
+  journal = {Information Technology in Industry},
   volume = {9},
   number = {1},
   pages = {344--352},
@@ -250,6 +250,18 @@
 }
 
 @article{magistri_contrastive_2022,
+  title = {Contrastive {{3D Shape Completion}} and {{Reconstruction}} for {{Agricultural Robots Using RGB-D Frames}}},
+  author = {Magistri, Federico and Marks, Elias and Nagulavancha, Sumanth and Vizzo, Ignacio and Labe, Thomas and Behley, Jens and Halstead, Michael and McCool, Chris and Stachniss, Cyrill},
+  year = {2022},
+  month = oct,
+  journal = {IEEE Robotics and Automation Letters},
+  volume = {7},
+  number = {4},
+  pages = {10120--10127},
+  doi = {10.1109/LRA.2022.3193239}
+}
+
+@article{magistri_contrastive_2022a,
   title = {Contrastive {{3D Shape Completion}} and {{Reconstruction}} for {{Agricultural Robots Using RGB-D Frames}}},
   author = {Magistri, Federico and Marks, Elias and Nagulavancha, Sumanth and Vizzo, Ignacio and Labe, Thomas and Behley, Jens and Halstead, Michael and McCool, Chris and Stachniss, Cyrill},
   year = {2022},
