--- a/references.bib
+++ b/references.bib
@@ -66,6 +66,18 @@
   doi = {10.3390/app13116751}
 }
 
+@article{drofova_use_2023,
+  title = {Use of Scanning Devices for Object {{3D}} Reconstruction by Photogrammetry and Visualization in Virtual Reality},
+  author = {Drofova, Irena and Guo, Wei and Wang, Haozhou and Adamek, Milan},
+  year = {2023},
+  month = apr,
+  journal = {Bulletin of Electrical Engineering and Informatics},
+  volume = {12},
+  number = {2},
+  pages = {868--881},
+  doi = {10.11591/eei.v12i2.4584}
+}
+
 @article{du_instance_2023,
   title = {Instance {{Segmentation}} and {{Berry Counting}} of {{Table Grape}} before {{Thinning Based}} on {{AS-SwinT}}},
   author = {Du, Wensheng and Liu, Ping},
@@ -134,6 +146,19 @@
   doi = {10.1109/TPAMI.2020.3005434}
 }
 
+@article{helmrich_scalable_2024,
+  title = {A Scalable Pipeline to Create Synthetic Datasets from Functional--Structural Plant Models for Deep Learning},
+  author = {Helmrich, Dirk Norbert and Bauer, Felix Maximilian and Giraud, Mona and Schnepf, Andrea and G{\"o}bbert, Jens Henrik and Scharr, Hanno and Hvannberg, Ebba {\TH}ora and Riedel, Morris},
+  editor = {Chen, Tsu-Wei},
+  year = {2024},
+  month = jan,
+  journal = {in silico Plants},
+  volume = {6},
+  number = {1},
+  pages = {diad022},
+  doi = {10.1093/insilicoplants/diad022}
+}
+
 @article{jadhav_comparative_2021,
   title = {Comparative {{Analysis}} of {{Deep Learning Architectures}} for {{Grape Cluster Instance Segmentation}}},
   author = {Jadhav, Parul and Barbole,, Dhanashree},
@@ -167,6 +192,16 @@
   volume = {216},
   pages = {108439},
   doi = {10.1016/j.compag.2023.108439}
+}
+
+@inproceedings{karoly_automated_2022,
+  title = {Automated {{Dataset Generation}} with {{Blender}} for {{Deep Learning-based Object Segmentation}}},
+  booktitle = {2022 {{IEEE}} 20th {{Jubilee World Symposium}} on {{Applied Machine Intelligence}} and {{Informatics}} ({{SAMI}})},
+  author = {K{\'a}roly, Art{\'u}r I. and Galambos, P{\'e}ter},
+  year = {2022},
+  month = mar,
+  pages = {000329--000334},
+  doi = {10.1109/SAMI54271.2022.9780790}
 }
 
 @article{li_maspc_2022,
@@ -250,18 +285,6 @@
 }
 
 @article{magistri_contrastive_2022,
-  title = {Contrastive {{3D Shape Completion}} and {{Reconstruction}} for {{Agricultural Robots Using RGB-D Frames}}},
-  author = {Magistri, Federico and Marks, Elias and Nagulavancha, Sumanth and Vizzo, Ignacio and Labe, Thomas and Behley, Jens and Halstead, Michael and McCool, Chris and Stachniss, Cyrill},
-  year = {2022},
-  month = oct,
-  journal = {IEEE Robotics and Automation Letters},
-  volume = {7},
-  number = {4},
-  pages = {10120--10127},
-  doi = {10.1109/LRA.2022.3193239}
-}
-
-@article{magistri_contrastive_2022a,
   title = {Contrastive {{3D Shape Completion}} and {{Reconstruction}} for {{Agricultural Robots Using RGB-D Frames}}},
   author = {Magistri, Federico and Marks, Elias and Nagulavancha, Sumanth and Vizzo, Ignacio and Labe, Thomas and Behley, Jens and Halstead, Michael and McCool, Chris and Stachniss, Cyrill},
   year = {2022},
