--- a/main.tex
+++ b/main.tex
@@ -738,7 +738,7 @@ How to \added{effectively} implement the method in practical application scenari
 \added{Additionally, \citet[Fig.~9]{scholer_automated_2015} successfully demonstrated the construction of virtual 3D models of grape bunches, including the hidden branching architecture. }
 \added{By collecting time-series growth data, the branching structure could potentially be captured during early stages of thinning, as suggested by \citep{du_instance_2023}.}
 \added{Such data could enable studies on growth prediction for optimizing harvesting times and assessments of branching structure deviations within crowded berry bunches.}
-\added{Finally, applying the latest procedural computer graphics (CG) modeling techniques \citep{karoly_automated_2022} or functional-structural plant models \citep{helmrich_scalable_2024} represents another promising approach to advancing practical applications in this field.}
+\added{Finally, applying the latest procedural computer graphics (CG) modeling techniques or functional-structural plant models represents another promising approach to advancing practical applications in this field.}
 
 % the achievement / impact of study / potential applications.
 Through the method proposed in this paper, the automated acquisition of 3D phenotypic traits of grape can be realized, which is of great significance in the field of agricultural production and scientific research. 
