--- a/references.bib
+++ b/references.bib
@@ -147,7 +147,7 @@
 }
 
 @article{helmrich_scalable_2024,
-  title = {A Scalable Pipeline to Create Synthetic Datasets from Functional--Structural Plant Models for Deep Learning},
+  title = {A Scalable Pipeline to Create Synthetic Datasets from Functional-Structural Plant Models for Deep Learning},
   author = {Helmrich, Dirk Norbert and Bauer, Felix Maximilian and Giraud, Mona and Schnepf, Andrea and G{\"o}bbert, Jens Henrik and Scharr, Hanno and Hvannberg, Ebba {\TH}ora and Riedel, Morris},
   editor = {Chen, Tsu-Wei},
   year = {2024},
